[package]
name = "ip-neigh"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
rtnetlink = { version = "0.21.0" }
netlink-sys = { version = "0.8" }
tokio = { version = "1.52.3", features = ["full"]}
futures = "0.3.32"
netlink-packet-route = {version = "0.30" }
netlink-packet-core= {version ="0.8"}
clap = { version = "4.6", default-features = false, features = ["cargo", "derive", "help", "std", "suggestions"] }
hickory-proto = { git = "https://github.com/hickory-dns/hickory-dns.git", rev = "c5e29b9da8334a14961a6326ad04e25397205430", features = ["dnssec-ring"] }
ubus = "0.1.7"
serde_json = "1.0.149"
log = "0.4"
env_logger = "0.11"
socket2 = { version = "0.6", features = ["all"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
