[package]
name = "ipv6-neigh"
version = "0.1.0"
edition = "2024"

[workspace]

[dependencies]
rtnetlink = { version = "0.21.0" }
netlink-sys = { version = "0.8" }
tokio = { version = "1.52.3", default-features = false, features = ["rt", "macros", "net", "time", "io-util"] }
futures = "0.3.32"
netlink-packet-route = {version = "0.30" }
netlink-packet-core= {version ="0.8"}
clap = { version = "4.6", default-features = false, features = ["cargo", "derive", "help", "std", "suggestions"] }
hickory-proto = { git = "https://github.com/hickory-dns/hickory-dns.git", rev = "50ee6c13a2272d42e5d03eff84dca8efd5109d96", features = ["dnssec-ring"] }
ubus = "0.1.7"
serde_json = "1.0.150"
log = "0.4"
env_logger = "0.11"
socket2 = { version = "0.6", features = ["all"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
overflow-checks = false
panic = "abort"
